# ychrome

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/ychrome/: SKILL.md
.claude/skills/ychrome-site-lore/: SKILL.md  lore.py
.claude/skills/ychrome-site-lore/lore/: 1mg.com.md  _TEMPLATE.md  ais.insight.gov.in.md  davaindia.com.md  eportal.incometax.gov.in.md  facebook.com.md  janaushadhi.gov.in.md  mentors.debian.net.md  protocol.bryanjohnson.com.md
assets/web-userscripts/: unblock-select.js
crates/ychrome-vault/: Cargo.toml
crates/ychrome-vault-proto/: Cargo.toml
crates/ychrome-vault-proto/src/: lib.rs
crates/ychrome-vault/src/: agent.rs  api.rs  crypto.rs  fido2.rs  generator.rs  lib.rs  main.rs  matching.rs  model.rs  session.rs  watchtower.rs
crates/ychrome-vault/testdata/: README.md  rsa_oaep_sha1_org_key.b64  rsa_pkcs8_private_key.b64
docs/: agent-engine.md  architecture.md  dream-control-surfaces.md  host-daemon.md  password-manager.md  product.md  protocol.md  vault.md
src/: daemon.rs  extensions.rs  main.rs  manifest.rs  passkey.rs  sidebar.rs  useragent.rs  webpolicy.rs  webzoom.rs
