[workspace]
# The browser (root package) plus ychrome's own crates. A libyggterm app owns
# its capabilities: the vault client lives here, not in yggterm.
members = ["crates/ychrome-vault"]
# `cargo build` at the root builds only the browser (lean, strip+lto); the vault
# crate is built explicitly (`-p ychrome-vault`) so its crypto/http deps don't
# weigh on the browser build.
default-members = ["."]

[package]
name = "ychrome"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A minimal profile-aware web viewport for the Yggdrasil ecosystem — multi-account browsing and ssh-tunneled localhost views, and the libyggterm pilot app"
repository = "https://github.com/yggdrasilhq/ychrome"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "5"
serde_json = "1"
tao = "0.35"
url = "2"
wry = "0.55"

[profile.release]
strip = true
lto = "thin"
