[workspace]
# The browser (root package) plus ychrome's own crates. A libyggterm app owns
# its capabilities: the vault client lives here, not in yggterm.
#
# `ychrome-vault` is the crypto-heavy Bitwarden client + agent. `ychrome-vault-proto`
# is JUST the agent's unix-socket wire (no crypto, no http): the browser links it
# to talk to the vault agent directly instead of spawning the `ychrome-vault` CLI.
members = ["crates/ychrome-vault", "crates/ychrome-vault-proto"]
# `cargo build` at the root builds only the browser (lean, strip+lto); the vault
# crate is built explicitly (`-p ychrome-vault`) so its crypto/http deps don't
# weigh on the browser build. The proto crate is tiny and rides with the browser.
default-members = ["."]

[package]
name = "ychrome"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A minimal profile-aware web viewport for the Yggdrasil ecosystem — multi-account browsing and ssh-tunneled localhost views, and the libyggterm pilot app"
repository = "https://github.com/yggdrasilhq/ychrome"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "5"
serde_json = "1"
# The vault agent's client transport — crypto-free, so the browser stays lean.
# The sidebar's vault pane and the passkey signer speak the agent socket through
# this instead of shelling out to the `ychrome-vault` CLI.
ychrome-vault-proto = { path = "crates/ychrome-vault-proto" }
# SHA-256 for the WebAuthn clientDataHash the passkey signer computes before it
# asks the vault agent to sign. The signing crypto itself lives in ychrome-vault.
sha2 = "0.10"
tao = "0.35"
url = "2"
wry = "0.55"

[profile.release]
strip = true
lto = "thin"
